# pr.DroneGCS

./: .gitignore  README.md  docker-compose.yml  mav.parm  mav.tlog  mav.tlog.raw  pyproject.toml
.docs/: Ardupilot.md  DataStructure.xlsx  DotNetty.md  Drone.md  Gazebo.md  JSX.md  MAVLink.md  MISSION_API.md  MavMicroservice.md  MissionPlanner.md  (+1 more)
kisa-predict-system/: ERROR.md  gRPC_main.py  pyproject.toml  requirements.txt  run.py  signalR_main.py
kisa-predict-system/generation/: drone_pb2.py  drone_pb2.pyi
kisa-predict-system/ml/: Gradient_boosting_classificator.pkl  Gradient_boosting_regression_pitch_ATTITUDE.pkl  Gradient_boosting_regression_roll_ATTITUDE.pkl  Gradient_boosting_regression_vibration_x_VIBRATION.pkl  Gradient_boosting_regression_yaw_ATTITUDE.pkl  Gradient_boosting_regression_ymag_RAW_IMU.pkl  Lasso_regression_ygyro_RAW_IMU.pkl  Lasso_regression_zgyro_RAW_IMU.pkl  MLP_regression_xmag_RAW_IMU.pkl  MLP_regression_yacc_RAW_IMU.pkl
kisa-predict-system/module/: ml_helper.py  mongodb_helper.py  paser.py  signalr_connection_builder.py
kisa-predict-system/protos/: drone.proto
predict-system/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
predict-system/generation/: drone_pb2.py  drone_pb2.pyi  drone_pb2_grpc.py
predict-system/ml/: Gradient_boosting_regression_vibration_y_VIBRATION.pkl  Gradient_boosting_regression_xacc_RAW_IMU.pkl  Gradient_boosting_regression_zacc_RAW_IMU.pkl  Gradient_boosting_regression_zmag_RAW_IMU.pkl  Lasso_regression_xgyro_RAW_IMU.pkl  MLP_regression_vibration_z_VIBRATION.pkl  README.md
predict-system/module/: drone_pb2_grpc.py
predict-system/protos/: drone.proto
(+389 files in other folders)
