[tool.poetry]
name = "pr-gcsdrone"
version = "0.1.0"
description = ""
authors = ["choiyun9yu <sw22tapple@gmail.com>"]
readme = "README.md"
packages = [{include = "pr"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
