[tool.poetry]
name = "kisa-predict-system"
version = "0.1.0"
description = ""
authors = ["choiyun9yu <sw22tapple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
signalrcore = "^0.9.5"
pandas = "^2.1.4"
joblib = "^1.3.2"
pymongo = "^4.6.1"
scikit-learn = "^1.3.2"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
