[tool.poetry]
name = "predict-system"
version = "0.1.0"
description = ""
authors = ["choiyun9yu <sw22tapple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.4"
scikit-learn = "1.3.2"
pymongo = "^4.6.1"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
